Some basic css and markup

--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,27 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Screenie</title>
+        <title>Wesual</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr.custom.80840.min.js"></script>
     </head>
     <body>
-    	SCREENIE
+    	<header class="menu-header row purple-background">
+            <div class="container">
+        		<h1 class="logo left">Wesual</h1>
+        		<ul class="menu right">
+                    <li><a href="">Sign up</a></li>
+                    <li><a href="">Read more</a></li>
+                </ul>
+            </div>
+    	</header>
+        <main class="hero row purple-background">
+            <div class="container">
+                HERO
+            </div>
+        </main>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
