Updates to css and markup

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 		<title>Wesual</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="css/main.css">
 		<script src="js/vendor/modernizr.custom.80840.min.js"></script>
 	</head>
@@ -24,23 +25,13 @@
 		</header>
 		<main class="hero row purple-background">
 			<div class="container">
-				<!-- Begin MailChimp Signup Form -->
-				<div id="mc_embed_signup">
-					<form action="http://wesual.us8.list-manage2.com/subscribe/post?u=d4ec7be237c63db92108bb046&amp;id=690d860704" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-						
-					<div class="mc-field-group">
-						<label for="mce-EMAIL">Email Address </label>
-						<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-					</div>
-						<div id="mce-responses" class="clear">
-							<div class="response" id="mce-error-response" style="display:none"></div>
-							<div class="response" id="mce-success-response" style="display:none"></div>
-						</div>
-						<div style="position: absolute; left: -5000px;"><input type="text" name="b_d4ec7be237c63db92108bb046_690d860704" tabindex="-1" value=""></div>
-						<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                <h2>Lorem ipsum dolor sit.</h2>
+                <div class="sign-up js-sign-up-form left">
+				    <form action="http://wesual.us8.list-manage2.com/subscribe/post?u=d4ec7be237c63db92108bb046&amp;id=690d860704" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    					<input class="base-input" type="email" value="" name="EMAIL">
+                        <button class="base-button" type="submit" name="subscribe">Submit</button>
 					</form>
 				</div>
-				<!--End mc_embed_signup-->
 			</div>
 		</main>
 
