--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
                         <button class="base-button" type="submit" name="subscribe">Submit</button>
 					</form>
 				</div>
+				<img src="img/tv.png" class="hero-tv">
 			</div>
 		</main>
 
