--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
 		</header>
 		<main class="hero row purple-background">
 			<div class="container">
-                <h2>Lorem ipsum dolor sit.</h2>
+                <h2><span class="block">Your startup.</span>Visualised.</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
                 <div class="sign-up js-sign-up-form left">
 				    <form action="http://wesual.us8.list-manage2.com/subscribe/post?u=d4ec7be237c63db92108bb046&amp;id=690d860704" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     					<input class="base-input" type="email" value="" name="EMAIL">
