More work on feature section, some typography

--- a/public/index.html
+++ b/public/index.html
@@ -34,25 +34,25 @@
 				</div>
 			</div>
 		</main>
-        <section class="row">
+        <section class="features row base-section-padding">
             <div class="container">
-                <h2 class="black">
-                    <span class="block purple">Team spirit<span> in the cloud.
+                <h2 class="purple">
+                    <span class="block">Team spirit</span> in the cloud.
                 </h2>
                 <ul class="feature-list row">
                     <li class="feature">
                         <div class="feature-bubble purple-background"></div>
-                        <strong>Built for efficency</strong>
+                        <strong class="block">Built for efficency</strong>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
                     </li>
                     <li class="feature">
                         <div class="feature-bubble purple-background"></div>
-                        <strong>Built for efficency</strong>
+                        <strong class="block">Built for efficency</strong>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
                     </li>
                     <li class="feature">
                         <div class="feature-bubble purple-background"></div>
-                        <strong>Built for efficency</strong>
+                        <strong class="block">Built for efficency</strong>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
                     </li>
                 </ul>
