Update features section style

--- a/public/index.html
+++ b/public/index.html
@@ -38,24 +38,24 @@
 				<img src="img/tv.png" class="hero-tv">
 			</div>
 		</main>
-        <section class="features row base-section-padding">
+        <section class="features row base-section-padding purple-background">
             <div class="container">
-                <h2 class="purple">
+                <h2 class="white">
                     <span class="block">Team spirit</span> in the cloud.
                 </h2>
                 <ul class="feature-list row">
                     <li class="feature">
-                        <div class="feature-bubble purple-background"></div>
+                        <div class="feature-icon"></div>
                         <strong class="block">Built for efficency</strong>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
                     </li>
                     <li class="feature">
-                        <div class="feature-bubble purple-background"></div>
+                        <div class="feature-icon"></div>
                         <strong class="block">Built for efficency</strong>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
                     </li>
                     <li class="feature">
-                        <div class="feature-bubble purple-background"></div>
+                        <div class="feature-icon"></div>
                         <strong class="block">Built for efficency</strong>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
                     </li>
