--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 		<script src="js/vendor/modernizr.custom.80840.min.js"></script>
 	</head>
 	<body>
-		<header class="menu-header row purple-background">
+		<header class="menu-header row grey-background">
 			<div class="container header-padding">
 				<h1 class="logo left">Wesual</h1>
 				<ul class="menu right">
@@ -23,12 +23,12 @@
 				</ul>
 			</div>
 		</header>
-		<main class="hero row purple-background">
-			<div class="container relative">
+		<main class="hero row grey-background">
+			<div class="container hero-padding relative">
 				<div class="hero-container">
 					<h2><span class="block">Your startup.</span>Visualised.</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-					<div class="sign-up js-sign-up-form left">
+					<div class="sign-up js-sign-up-form">
 						<form action="http://wesual.us8.list-manage2.com/subscribe/post?u=d4ec7be237c63db92108bb046&amp;id=690d860704" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 							<input class="base-input" type="email" value="" name="EMAIL">
 							<button class="base-button" type="submit" name="subscribe">Sign up for beta</button>
@@ -38,7 +38,7 @@
 				<img src="img/tv.png" class="hero-tv">
 			</div>
 		</main>
-        <section class="features row base-section-padding">
+        <section class="features row purple-background base-section-padding">
             <div class="container">
                 <h2 class="purple">
                     <span class="block">Team spirit</span> in the cloud.
