--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
 					<div class="sign-up js-sign-up-form">
 						<form action="http://wesual.us8.list-manage2.com/subscribe/post?u=d4ec7be237c63db92108bb046&amp;id=690d860704" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-							<input class="base-input" type="email" value="" name="EMAIL">
+							<input class="base-input signup-input" type="email" value="" name="EMAIL">
 							<button class="base-button" type="submit" name="subscribe">Sign up for beta</button>
 						</form>
 					</div>
