added macbook and more slides

--- a/public/index.html
+++ b/public/index.html
@@ -62,9 +62,20 @@
                 </ul>
             </div>
         </section>
-		<section class="row base-section-padding">
+		<section class="row base-section-padding dark-background">
 			<div class="container">
-
+				<h2>Telegraphic</h2>
+			</div>
+		</section>
+		<section class="row base-section-padding light-gray-background">
+			<div class="container">
+				<h2>Customizable</h2>
+				<img src="img/mbr.png" class="macbook">
+			</div>
+		</section>
+		<section class="row base-section-padding white-background">
+			<div class="container">
+				<h2>Coming soon</h2>
 			</div>
 		</section>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
