New button overstate

--- a/public/index.html
+++ b/public/index.html
@@ -51,12 +51,12 @@
                     </li>
                     <li class="feature">
                         <i class="icon icon-star"></i>
-                        <strong class="block">Built for efficency</strong>
+                        <strong class="block">Set rewards</strong>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
                     </li>
                     <li class="feature">
                         <i class="icon icon-flag"></i>
-                        <strong class="block">Built for efficency</strong>
+                        <strong class="block">Follow goals</strong>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
                     </li>
                 </ul>
