Added slider base, added twitter icon

--- a/public/index.html
+++ b/public/index.html
@@ -62,9 +62,19 @@
                 </ul>
             </div>
         </section>
-		<section class="row base-section-padding dark-background">
+		<section class="telegraphic row base-section-padding dark-background">
 			<div class="container">
 				<h2>Telegraphic</h2>
+                <div class="slider">
+
+                    <ul class="slider-pagination">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                <div>
 			</div>
 		</section>
 		<section class="row base-section-padding light-gray-background">
