--- a/public/index.html
+++ b/public/index.html
@@ -77,12 +77,13 @@
 			<div class="container">
 				<h2>Coming soon</h2>
 				<p>We'll let you know when this thing drops. You don't want to miss it.</p>
-				<div class="sign-up js-sign-up-form">
+				<div class="sign-up js-sign-up-form margin-bottom-m">
 					<form action="http://wesual.us8.list-manage2.com/subscribe/post?u=d4ec7be237c63db92108bb046&amp;id=690d860704" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-						<input class="base-input signup-input" type="email" value="" name="EMAIL">
+						<input class="base-input signup-input" type="email" value="" placeholder="Your email address" name="EMAIL">
 						<button class="base-button" type="submit" name="subscribe">Sign up for beta</button>
 					</form>
 				</div>
+				<p>Say hello <a href="http://twitter.com/wesual" target="_blank">@wesual</a></p>
 			</div>
 		</section>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
