--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,7 @@
 			<div class="container">
 				<h2>Telegraphic</h2>
                 <div class="slider">
+                    <div class="slider-viewport"></div>
 
                     <ul class="slider-pagination">
                         <li></li>
@@ -75,6 +76,7 @@
                         <li></li>
                     </ul>
                 <div>
+
 			</div>
 		</section>
 		<section class="row base-section-padding light-gray-background">
