--- a/public/index.html
+++ b/public/index.html
@@ -65,18 +65,26 @@
 		<section class="telegraphic row base-section-padding dark-background">
 			<div class="container">
 				<h2>Telegraphic</h2>
-                <div class="slider">
-                    <div class="slider-viewport"></div>
-
-                    <ul class="slider-pagination">
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                <div>
-
+          <div class="slider js-slider">
+            <ul class="slider-viewport js-slider-viewport">
+              <li class="active">
+                <img src="img/slide-1.jpg">
+              </li>
+              <li>
+                <img src="img/slide-2.jpg">
+              </li>
+              <li>
+                <img src="img/slide-3.jpg">
+              </li>
+              <li>
+                <img src="img/slide-4.jpg">
+              </li>
+              <li>
+                <img src="img/slide-5.jpg">
+              </li>
+            </ul>
+            <ul class="slider-pagination js-slider-pagination"></ul>
+          </div>
 			</div>
 		</section>
 		<section class="row base-section-padding light-gray-background">
