--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,14 @@
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="css/main.css">
 		<script src="js/vendor/modernizr.custom.80840.min.js"></script>
+    <script src="js/vendor/pxloader.js"></script>
 	</head>
 	<body>
 		<header class="menu-header row grey-background">
 			<div class="container header-padding">
-				<h1 class="logo left">Wesual</h1>
+        <a href="">
+				  <h1 class="logo left">Wesual</h1>
+        </a>
 				<ul class="menu right">
 					<li><a href="">For startups</a></li>
 					<li><a href="">For agencies</a></li>
@@ -38,53 +41,53 @@
 				<img src="img/tv.png" class="hero-tv">
 			</div>
 		</main>
-        <section class="features row purple-background base-section-padding">
-            <div class="container">
-                <h2 class="white">
-                    <span class="block">Team spirit</span> in the cloud.
-                </h2>
-                <ul class="feature-list row">
-                    <li class="feature">
-                        <i class="icon icon-flash"></i>
-                        <strong class="block">Built for efficency</strong>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
-                    </li>
-                    <li class="feature">
-                        <i class="icon icon-star"></i>
-                        <strong class="block">Set rewards</strong>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
-                    </li>
-                    <li class="feature">
-                        <i class="icon icon-flag"></i>
-                        <strong class="block">Follow goals</strong>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
-                    </li>
-                </ul>
-            </div>
-        </section>
+    <section class="features row purple-background base-section-padding">
+      <div class="container">
+        <h2 class="white">
+          <span class="block">Team spirit</span> in the cloud.
+        </h2>
+        <ul class="feature-list row">
+          <li class="feature">
+            <i class="icon icon-flash"></i>
+            <strong class="block">Built for efficency</strong>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
+          </li>
+          <li class="feature">
+            <i class="icon icon-star"></i>
+            <strong class="block">Set rewards</strong>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
+          </li>
+          <li class="feature">
+            <i class="icon icon-flag"></i>
+            <strong class="block">Follow goals</strong>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
+          </li>
+        </ul>
+      </div>
+    </section>
 		<section class="telegraphic row base-section-padding dark-background">
 			<div class="container">
 				<h2>Telegraphic</h2>
-          <div class="slider js-slider">
-            <ul class="slider-viewport js-slider-viewport">
-              <li class="active">
-                <img src="img/slide-1.jpg">
-              </li>
-              <li>
-                <img src="img/slide-2.jpg">
-              </li>
-              <li>
-                <img src="img/slide-3.jpg">
-              </li>
-              <li>
-                <img src="img/slide-4.jpg">
-              </li>
-              <li>
-                <img src="img/slide-5.jpg">
-              </li>
-            </ul>
-            <ul class="slider-pagination js-slider-pagination"></ul>
-          </div>
+        <div class="slider js-slider">
+          <ul class="slider-viewport js-slider-viewport">
+            <li class="active">
+              <img src="img/slide-1.jpg">
+            </li>
+            <li>
+              <img src="img/slide-2.jpg">
+            </li>
+            <li>
+              <img src="img/slide-3.jpg">
+            </li>
+            <li>
+              <img src="img/slide-4.jpg">
+            </li>
+            <li>
+              <img src="img/slide-5.jpg">
+            </li>
+          </ul>
+          <ul class="slider-pagination js-slider-pagination"></ul>
+        </div>
 			</div>
 		</section>
 		<section class="row base-section-padding light-gray-background">
