Hero intro anim

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="css/main.css">
+    <script src="//ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
 		<script src="js/vendor/modernizr.custom.80840.min.js"></script>
     <script src="js/vendor/pxloader.js"></script>
 	</head>
@@ -29,7 +30,10 @@
 		<main class="hero row grey-background">
 			<div class="container hero-padding relative">
 				<div class="hero-container">
-					<h2><span class="block">Your startup.</span>Visualised.</h2>
+					<h2>
+            <span class="hero-header-first block">Your startup.</span>
+            <span class="hero-header-second block">Visualised.</span>
+          </h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
 					<div class="sign-up js-sign-up-form">
 						<form action="http://wesual.us8.list-manage2.com/subscribe/post?u=d4ec7be237c63db92108bb046&amp;id=690d860704" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
