Major updates across the board

--- a/public/index.html
+++ b/public/index.html
@@ -51,17 +51,17 @@
           <span class="block">Team spirit</span> in the cloud.
         </h2>
         <ul class="feature-list row">
-          <li class="feature">
+          <li class="feature feature-first">
             <i class="icon icon-flash"></i>
             <strong class="block">Built for efficency</strong>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
           </li>
-          <li class="feature">
+          <li class="feature feature-second">
             <i class="icon icon-star"></i>
             <strong class="block">Set rewards</strong>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
           </li>
-          <li class="feature">
+          <li class="feature feature-third">
             <i class="icon icon-flag"></i>
             <strong class="block">Follow goals</strong>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
@@ -97,7 +97,10 @@
 		<section class="row base-section-padding light-gray-background">
 			<div class="container">
 				<h2>Customizable</h2>
-				<img src="img/mbr.png" class="macbook">
+        <div class="macbook">
+          <div class="macbook-viewport"></div>
+          <img src="img/mbp.png" class="macbook">
+        </div>
 			</div>
 		</section>
 		<section class="row base-section-padding white-background">
