removed menu and centered logo

--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,9 @@
 	<body>
 		<header class="menu-header row grey-background">
 			<div class="container header-padding">
-        <a href="">
-				  <h1 class="logo left">Wesual</h1>
-        </a>
-				<ul class="menu right">
-					<li><a href="">For startups</a></li>
-					<li><a href="">For agencies</a></li>
-				</ul>
+				<a href="/">
+				  <h1 class="logo">Wesual</h1>
+				</a>
 			</div>
 		</header>
 		<main class="hero row grey-background">
