--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="css/main.css">
-    <script src="//ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
 		<script src="js/vendor/modernizr.custom.80840.min.js"></script>
-    <script src="js/vendor/pxloader.js"></script>
+	<script src="js/vendor/pxloader.js"></script>
 	</head>
 	<body>
 		<header class="menu-header row grey-background">
@@ -41,62 +41,62 @@
 				<img src="img/tv.png" class="hero-tv">
 			</div>
 		</main>
-    <section class="features row purple-background base-section-padding">
-      <div class="container">
-        <h2 class="white">
-          <span class="block">Team spirit</span> in the cloud.
-        </h2>
-        <ul class="feature-list row">
-          <li class="feature feature-first">
-            <i class="icon icon-flash"></i>
-            <strong class="block">Built for efficency</strong>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
-          </li>
-          <li class="feature feature-second">
-            <i class="icon icon-star"></i>
-            <strong class="block">Set rewards</strong>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
-          </li>
-          <li class="feature feature-third">
-            <i class="icon icon-flag"></i>
-            <strong class="block">Follow goals</strong>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
-          </li>
-        </ul>
-      </div>
-    </section>
+		<section class="features row purple-background base-section-padding on-top">
+		  <div class="container">
+			<h2 class="white">
+				<span class="block">Team spirit</span> in the cloud.
+			</h2>
+			<ul class="feature-list row">
+				<li class="feature feature-first">
+					<i class="icon icon-flash"></i>
+					<strong class="block">Built for efficency</strong>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
+				</li>
+				<li class="feature feature-second">
+					<i class="icon icon-star"></i>
+					<strong class="block">Set rewards</strong>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
+				</li>
+				<li class="feature feature-third">
+					<i class="icon icon-flag"></i>
+					<strong class="block">Follow goals</strong>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
+				</li>
+			</ul>
+		  </div>
+		</section>
 		<section class="telegraphic row base-section-padding dark-background">
 			<div class="container">
 				<h2>Telegraphic</h2>
-        <div class="slider js-slider">
-          <ul class="slider-viewport js-slider-viewport">
-            <li class="active">
-              <img src="img/slide-1.jpg">
-            </li>
-            <li>
-              <img src="img/slide-2.jpg">
-            </li>
-            <li>
-              <img src="img/slide-3.jpg">
-            </li>
-            <li>
-              <img src="img/slide-4.jpg">
-            </li>
-            <li>
-              <img src="img/slide-5.jpg">
-            </li>
-          </ul>
-          <ul class="slider-pagination js-slider-pagination"></ul>
-        </div>
+		<div class="slider js-slider">
+		  <ul class="slider-viewport js-slider-viewport">
+			<li class="active">
+			  <img src="img/slide-1.jpg">
+			</li>
+			<li>
+			  <img src="img/slide-2.jpg">
+			</li>
+			<li>
+			  <img src="img/slide-3.jpg">
+			</li>
+			<li>
+			  <img src="img/slide-4.jpg">
+			</li>
+			<li>
+			  <img src="img/slide-5.jpg">
+			</li>
+		  </ul>
+		  <ul class="slider-pagination js-slider-pagination"></ul>
+		</div>
 			</div>
 		</section>
 		<section class="row base-section-padding light-gray-background">
 			<div class="container">
 				<h2>Customizable</h2>
-        <div class="macbook">
-          <div class="macbook-viewport"></div>
-          <img src="img/mbp.png" class="macbook">
-        </div>
+		<div class="macbook">
+		  <div class="macbook-viewport"></div>
+		  <img src="img/mbp.png" class="macbook">
+		</div>
 			</div>
 		</section>
 		<section class="row base-section-padding white-background">
