--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,9 @@
 							<button class="base-button" type="submit" name="subscribe">Sign up for beta</button>
 						</form>
 					</div>
+					<div class="success-msg-container success-msg-container-js" style="display:none;">
+						<span class="success-msg">Thanks! We'll keep you posted.</span>
+					</div>
 				</div>
 				<img src="img/tv.png" class="hero-tv">
 			</div>
@@ -108,6 +111,9 @@
 						<input class="base-input signup-input" type="email" value="" placeholder="Your email address" name="EMAIL">
 						<button class="base-button" type="submit" name="subscribe">Sign up for beta</button>
 					</form>
+				</div>
+				<div class="success-msg-container success-msg-container-js" style="display:none;">
+					<span class="success-msg">Thanks! We'll keep you posted.</span>
 				</div>
 				<p>Say hello <i class="icon icon-twitter"></i> <a href="http://twitter.com/wesual" target="_blank">@wesual</a></p>
 			</div>
