--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 						<span class="hero-header-first block">Your startup.</span>
 						<span class="hero-header-second block">Visualised.</span>
 					</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+					<p>Whether you’re a startup, agency or just an amazing bunch of professionals, Wesual will boost your team spirit.</p>
 					<div class="sign-up js-sign-up-form">
 						<form action="http://wesual.us8.list-manage2.com/subscribe/post?u=d4ec7be237c63db92108bb046&amp;id=690d860704" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate js-mailchimp" target="_blank" novalidate>
 							<input class="base-input signup-input" type="email" placeholder="Your email address" value="" name="EMAIL">
@@ -52,18 +52,18 @@
 			<ul class="feature-list row">
 				<li class="feature feature-first">
 					<i class="icon icon-flash"></i>
-					<strong class="block">Built for efficency</strong>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
+					<strong class="block">Social</strong>
+					<p>Tweet. Check-in. Work. Being a team is so much more than what’s in the backlog, that’s what makes it fun!</p>
 				</li>
 				<li class="feature feature-second">
 					<i class="icon icon-star"></i>
-					<strong class="block">Set rewards</strong>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
+					<strong class="block">Beatiful</strong>
+					<p>WOW! It might not be traditional art, but this sure is data visualization at its best.</p>
 				</li>
 				<li class="feature feature-third">
 					<i class="icon icon-flag"></i>
-					<strong class="block">Follow goals</strong>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac magna justo.</p>
+					<strong class="block">Simple</strong>
+					<p>Ready, steady, go! For a super easy set-up and use, Wesual connects to the services your team is already using.</p>
 				</li>
 			</ul>
 		  </div>
