--- a/public/index.html
+++ b/public/index.html
@@ -68,29 +68,29 @@
 		<section class="telegraphic row base-section-padding dark-background">
 			<div class="container">
 				<h2>Telegraphic</h2>
-		<div class="slider js-slider">
-		  <ul class="slider-viewport js-slider-viewport">
-			<li class="active">
-			  <img src="img/slide-1.jpg">
-			</li>
-			<li>
-			  <img src="img/slide-2.jpg">
-			</li>
-			<li>
-			  <img src="img/slide-3.jpg">
-			</li>
-			<li>
-			  <img src="img/slide-4.jpg">
-			</li>
-			<li>
-			  <img src="img/slide-5.jpg">
-			</li>
-		  </ul>
-		  <ul class="slider-pagination js-slider-pagination"></ul>
-		</div>
+    		<div class="slider js-slider">
+    		  <ul class="slider-viewport js-slider-viewport">
+    			<li class="active">
+    			  <img src="img/slide-1.jpg">
+    			</li>
+    			<li>
+    			  <img src="img/slide-2.jpg">
+    			</li>
+    			<li>
+    			  <img src="img/slide-3.jpg">
+    			</li>
+    			<li>
+    			  <img src="img/slide-4.jpg">
+    			</li>
+    			<li>
+    			  <img src="img/slide-5.jpg">
+    			</li>
+    		  </ul>
+    		  <ul class="slider-pagination js-slider-pagination"></ul>
+    		</div>
 			</div>
 		</section>
-		<section class="row base-section-padding light-gray-background">
+		<section class="customizable row base-section-padding light-gray-background">
 			<div class="container">
 				<h2>Customizable</h2>
 		<div class="macbook">
