--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 				<li class="feature feature-first">
 					<i class="icon icon-flash"></i>
 					<strong class="block">Social</strong>
-					<p>Tweet. Check-in. Work. Being a team is so much more than what’s in the backlog, that’s what makes it fun!</p>
+					<p>Tweet. Check-in. Work. Being a team is so much more than what’s in the backlog.</p>
 				</li>
 				<li class="feature feature-second">
 					<i class="icon icon-star"></i>
@@ -63,7 +63,7 @@
 				<li class="feature feature-third">
 					<i class="icon icon-flag"></i>
 					<strong class="block">Simple</strong>
-					<p>Ready, steady, go! For a super easy set-up and use, Wesual connects to the services your team is already using.</p>
+					<p>No hassle. Super fast and easy set-up, Wesual connects to services you're already using.</p>
 				</li>
 			</ul>
 		  </div>
