Added Bacon Pancakes lyrics

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,11 @@
     ░░░░░█░░█░░░░░░░░█░░█░░░█░██░░░░░░██░█░░
     ░░▄▄▄█░░█░░░░░▄▄▄█░░█░▄█▀░██░░░░░▄██░█░░
     ░▀█▄▄▄▄▄█░░░░░█▄▄▄▄▄█░░▀▄▀▀░░░░░░█▄▄▄█░░
+
+    Bacon pancakes, makin' bacon pancakes,
+    Take some bacon and I'll put it in a pancake,
+    Bacon pancakes, that's what it's gonna make,
+    Bacon pancaaake!
     -->
 		<header class="menu-header row grey-background">
 			<div class="container header-padding">
