--- a/public/index.html
+++ b/public/index.html
@@ -52,8 +52,8 @@
 			<div class="container hero-padding relative">
 				<div class="hero-container">
 					<h2>
-						<span class="hero-header-first block">Your startup.</span>
-						<span class="hero-header-second block">Visualised.</span>
+						<span class="hero-header-first block">Your team.</span>
+						<span class="hero-header-second block">Visualized.</span>
 					</h2>
 					<p>Whether you’re a startup, agency or just an amazing bunch of professionals, Wesual will boost your team spirit.</p>
 					<div class="sign-up js-sign-up-form">
