--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="css/main.css">
 		<script src="//ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
 		<script src="js/vendor/modernizr.custom.80840.min.js"></script>
-	<script src="js/vendor/pxloader.js"></script>
+	  <script src="js/vendor/pxloader.js"></script>
 	</head>
 	<body>
     <!--
@@ -124,8 +124,10 @@
 			<div class="container">
 				<h2>Customizable</h2>
 		<div class="macbook">
-		  <div class="macbook-viewport"></div>
-		  <img src="img/mbp.png" class="macbook">
+		  <div class="macbook-viewport">
+        <img class="macbook-contents" src="img/mbp-contents.jpg">
+      </div>
+		  <img class="macbook" src="img/mbp.jpg">
 		</div>
 			</div>
 		</section>
