--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
 		<section class="features row purple-background base-section-padding on-top">
 		  <div class="container">
 			<h2 class="white">
-				<span class="block">Team spirit</span> in the cloud.
+				<span class="block">Team spirit</span> at a glance.
 			</h2>
 			<ul class="feature-list row">
 				<li class="feature feature-first">
