--- a/public/index.html
+++ b/public/index.html
@@ -78,17 +78,17 @@
 			</h2>
 			<ul class="feature-list row">
 				<li class="feature feature-first">
-					<i class="icon icon-flash"></i>
+					<i class="icon icon-social"></i>
 					<strong class="block">Social</strong>
 					<p>Tweet. Check-in. Work. Being a team is so much more than what’s in the backlog.</p>
 				</li>
 				<li class="feature feature-second">
-					<i class="icon icon-star"></i>
+					<i class="icon icon-beautiful"></i>
 					<strong class="block">Beatiful</strong>
 					<p>WOW! It might not be traditional art, but this sure is data visualization at its best.</p>
 				</li>
 				<li class="feature feature-third">
-					<i class="icon icon-flag"></i>
+					<i class="icon icon-simple"></i>
 					<strong class="block">Simple</strong>
 					<p>No hassle. Super fast and easy set-up, Wesual connects to services you're already using.</p>
 				</li>
@@ -99,6 +99,7 @@
 			<div class="container">
 				<h2>Telegraphic</h2>
     		<div class="slider js-slider">
+          <img class="slider-glare" src="img/tv-glare.png">
     		  <ul class="slider-viewport js-slider-viewport">
     			<li class="active">
     			  <img src="img/slide-1.jpg">
