--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
 						<span class="success-msg">Thanks! We'll keep you posted.</span>
 					</div>
 				</div>
-				<img src="img/tv.png" class="hero-tv">
+				<img class="hero-tv" src="img/tv-top.jpg">
 			</div>
 		</main>
 		<section class="features row purple-background base-section-padding on-top">
@@ -101,22 +101,22 @@
     		<div class="slider js-slider">
           <img class="slider-glare" src="img/tv-glare.png">
     		  <ul class="slider-viewport js-slider-viewport">
-    			<li class="active">
-    			  <img src="img/slide-1.jpg">
-    			</li>
-    			<li>
-    			  <img src="img/slide-2.jpg">
-    			</li>
-    			<li>
-    			  <img src="img/slide-3.jpg">
-    			</li>
-    			<li>
-    			  <img src="img/slide-4.jpg">
-    			</li>
-    			<li>
-    			  <img src="img/slide-5.jpg">
-    			</li>
-    		  </ul>
+      			<li class="active">
+      			  <img src="img/slide-1.jpg">
+      			</li>
+      			<li>
+      			  <img src="img/slide-2.jpg">
+      			</li>
+      			<li>
+      			  <img src="img/slide-3.jpg">
+      			</li>
+      			<li>
+      			  <img src="img/slide-4.jpg">
+      			</li>
+      			<li>
+      			  <img src="img/slide-5.jpg">
+      			</li>
+      		</ul>
     		  <ul class="slider-pagination js-slider-pagination"></ul>
     		</div>
 			</div>
