--- a/public/index.html
+++ b/public/index.html
@@ -124,7 +124,9 @@
 		<section class="customizable row base-section-padding light-gray-background">
 			<div class="container">
 				<h2>Customizable</h2>
-	 			<img class="macbook" src="img/mbp.png">
+			</div>
+ 			<img class="macbook" src="img/mbp.png">
+ 			<div class="container">
 				<div class="support-copy">Support for these and more</div>
 				<img src="img/logos.png" class="support-logos">
 			</div>
