--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
 				</li>
 				<li class="feature feature-second">
 					<i class="icon icon-beautiful"></i>
-					<strong class="block">Beatiful</strong>
+					<strong class="block">Beautiful</strong>
 					<p>WOW! It might not be traditional art, but this sure is data visualization at its best.</p>
 				</li>
 				<li class="feature feature-third">
