--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="css/main.css">
 		<script src="//ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
 		<script src="js/vendor/modernizr.custom.80840.min.js"></script>
-	  <script src="js/vendor/pxloader.js"></script>
+	  <script src="js/vendor/pxloader.min.js"></script>
 	</head>
 	<body>
 	<!--
@@ -149,7 +149,7 @@
 		</footer>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-		<script src="js/main.js"></script>
+		<script src="js/main.min.js"></script>
 		<script>
 			(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
 			function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
